# fastapi-system-monitor

./: LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py  start.py  system_metrics.db  testing.md
app/: __init__.py  main.py
app/api/: __init__.py  endpoints.py
app/core/: __init__.py  config.py  metrics_recorder.py  system_monitor.py
app/database/: db_manager.py
templates/: index.html
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  api_fixtures.py  db_fixtures.py
tests/integration/: __init__.py  test_api_endpoints.py
tests/unit/: __init__.py  test_db_manager.py  test_metrics_recorder.py  test_system_monitor.py
